k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
  labels:
    app: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        imagePullPolicy: IfNotPresent
        image: krtvand/hello_app:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /liveness
