k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
      - path: /otusapp/a-kartaev
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8000
